    switch and 3.0 (quilt) source format support.
  * Switch to 3.0 (quilt) source package format and original tar.bz2
    tarballs.
  * Drop quilt from Build-Depends, no longer needed for 3.0 (quilt).
  * Remove debian/README.source. Patch support is part of source format
    now.
  * Bump kde-sc-dev-latest build dependency to 4:4.4.4.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 28 May 2010 21:51:16 +0300

kdebindings (4:4.4.3-2) unstable; urgency=low

  [ Michael Meskes ]
  * Made sure links are created in the right direction so they do not all
    dangle under the same name. (Closes: #580400, #580401)
  * Fixed typo in extended description. (Closes: #580117)

  [ Sune Vuorela ]
  * Make upstream create a patch to actually support armel. Steal the patch.
  * Fix segfault when trying to parse/write the akonadi smoke part. Patch
    acknowledged by upstream.

 -- Michael Meskes <meskes@debian.org>  Tue, 11 May 2010 11:27:06 +0200

kdebindings (4:4.4.3-1) unstable; urgency=low

  * New upstream release.

  [ Modestas Vainius ]
  * Bump kde-sc-dev-latest build dependency to 4.4.3.
  * Release KDE SC 4.4.3 to unstable.

  [ Pino Toscano ]
  * Few touches to the packages descriptions.
    - ... including the krosspython one. (Closes: #579712)

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 01 May 2010 23:37:52 +0300

kdebindings (4:4.4.2-1) experimental; urgency=low

  * New upstream release.

  [ Modestas Vainius ]
  * Change my email address to modax@debian.org in Uploaders field.
  * Fix Vcs-Browser URL.
  * Add cmake to Build-Depends.
  * Add kde-sc-dev-latest (>= 4:4.4.2) to Build-Depends.
  * Bump KDE build dependencies to 4:4.4.

  [ Pino Toscano ]
  * Few touches to the packages descriptions.
    - ... including a typo in the python-kde4 one. (Closes: #567161)

  [ David Palacio ]
  * Refresh patches
    Remove 13_csharp_fix_build_deps.diff: applied upstream
  * Do not skip RPATH
  * New packages for modular Smoke