@@ -18,6 +18,7 @@ kdebindings (4:4.4.4-0r1) UNRELEASED; urgency=low
   * Remove debian/README.source. Patch support is part of source format
     now.
   * Bump kde-sc-dev-latest build dependency to 4:4.4.4.
+  * Use default KDE 4 variables from variables.mk for building.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 28 May 2010 21:51:16 +0300
 
